@@ -75,7 +75,11 @@ setup(name="buildbot",
                 ],
       data_files=[("buildbot", ["buildbot/buildbot.png"]),
                   ("buildbot/clients", ["buildbot/clients/debug.glade"]),
-                  ("buildbot/status/web", ["buildbot/status/web/classic.css"]),
+                  ("buildbot/status/web",
+                   ["buildbot/status/web/classic.css",
+                    "buildbot/status/web/index.html",
+                    "buildbot/status/web/robots.txt",
+                    ]),
                   ("buildbot/scripts", ["buildbot/scripts/sample.cfg"]),
                   ("buildbot/test/mail", testmsgs),
                   ("buildbot/test/subdir", ["buildbot/test/subdir/emit.py"]),
